# turn-up-arch

./: .SRCINFO  .gitignore  LICENSE  PKGBUILD  README.md  pyproject.toml  turnupd.install  turnupd.py
.github/workflows/: publish-aur.yml
contrib/: config.example.json  config.example.toml  turnup-ui.service  turnupd.service
src/turnup/: __init__.py  audio.py  config.py  turnupd.py
src/turnup/ui/: __init__.py  server.py
src/turnup/ui/static/: index.html  manifest.json
src/turnup/ui/static/assets/: index-1cIxdxyn.js  index-35WG7lRs.css  index-Bit2B6Yg.css  index-Dcy9vL-q.js
tests/: test_audio.py  test_protocol.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/public/: sw.js
ui/src/: App.tsx  api.ts  index.css  main.tsx  types.ts  utils.ts
ui/src/__tests__/: KnobCard.test.tsx  api.test.ts
ui/src/components/: ButtonCard.tsx  ColorPicker.tsx  Connection.tsx  GlobalLeds.tsx  KnobCard.tsx  Presets.tsx  Toast.tsx
